Add text-based music search via iTunes, restore yt-dlp MP3 download
Replaces the YouTube-link recognition flow with a text-search flow:
users type a song/artist name, results are pulled from the iTunes
Search API (paginated, sortable, themeable inline keyboards), and a
selected track can be downloaded as MP3 in a chosen bitrate.

MP3 download goes through yt-dlp (YouTube search) instead of Jamendo's
licensed-track matching, since Jamendo rarely has mainstream tracks and
was surfacing "no legal MP3 source found" for almost every search. The
Dockerfile installs yt-dlp again, and a bgutil-ytdlp-pot-provider
sidecar plus optional YTDLP_PROXY support the PO-token/proxy dance
YouTube now requires for direct audio downloads.

Text search is temporarily disabled via MUSIC_SEARCH_ENABLED=false:
YouTube is currently returning HTTP 403 on official/label music videos
specifically even with a matched PO token, proxy and cookies, which
matches a known unresolved yt-dlp issue. The bot falls back to
ACRCloud-only recognition from audio/video uploads until that clears
up; the search/download code and proxy infra stay in place to flip
back on with a single env var once it does.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>